[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://art/growth character.png" type="Texture" id=2]
[ext_resource path="res://art/growth character4.png" type="Texture" id=3]
[ext_resource path="res://art/growth character2.png" type="Texture" id=4]
[ext_resource path="res://art/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://art/hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://art/easter egg.png" type="Texture" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_blue : hint_color;
uniform vec4 flash_white : hint_color;
uniform float flash_state : hint_range(0, 1) = 0.0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (COLOR.r + COLOR.b + COLOR.g > 0.3)
		COLOR.rgb = mix(COLOR, flash_blue, flash_state).rgb;
	if (COLOR.r + COLOR.b + COLOR.g < 0.3)
		if (flash_state > 0.75)
			COLOR.rgb = flash_white.rgb;
		else
			COLOR.rgb = vec3(0, 0, 0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/flash_blue = Color( 0.160784, 0.678431, 1, 1 )
shader_param/flash_white = Color( 1, 0.945098, 0.909804, 1 )
shader_param/flash_state = 0.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "adult idle",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "child idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "easter egg",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "elderly idle",
"speed": 3.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "adult jump",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "adult run",
"speed": 4.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "elderly jump",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "child run",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "elderly run",
"speed": 3.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "child jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 8, 14 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 16, 28 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 62
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 18 )
animation = "easter egg"
playing = true

[node name="ChildHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="AdultHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 20 )
disabled = true

[node name="ElderlyHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 21 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -16 )
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = 0
limit_top = 0
limit_right = 2048
limit_bottom = 608
limit_smoothed = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Shock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
